* important changes in version 1.50 12/06/2009:
- Apply patch in #46450: Support for --no-same-permissions style behavior
  This facilitates leaving the +x bit, while still applying your umask on
  the extracted file. 

* important changes in version 1.48 20/04/2009:
- Address #44680 (Improve error reporting on short corrupted archives)
  Archives of less than 512 bytes would not have a clear error string set
- Requires at least IO::Compres::* 2.015, to address: #43609: Memory 
  problem with A::T. Turns out 2.012 was leaking memory.

* important changes in version 1.46 05/03/2009:
- Address: bug #43513: [PATCH] Accept wrong checksums from SunOS and HP-UX tar
  like GNU tar does. See here for details:
  http://www.gnu.org/software/tar/manual/tar.html#SEC139
- make COMPRESS_BZIP and COMPRESS_GZIP constants actually work and fix their
  documentation

* important changes in version 1.44 19/01/2009:
- Address #41798: Nonempty $\ when writing a Tar file produces a
  corrupt Tar file 	
- Textual fix to Makefile.PL diagnostics

* important changes in version 1.42 13/12/2008:
- Address #40426: Archive Tar to support direct Archive::Tar::File adds
  It is now possible to add Archive::Tar::File objects via $tar->add_files
- Address #40016 (Archive::Tar assumes $> won't change): CAN_CHOWN is now a
  dynamic check upon extraction. This allows scripts to drop privileges when
  desired
- Address take 2 of #39933: [PATCH] handle ../ directory name on VMS
  John M. sent in a better way to do directory name translation.
 
* important changes in version 1.40 13/10/2008:
- Add $class->has_zlib_support and $class->has_bzip2_support to
  discern which A::T can support
- Address: #39933: [PATCH] handle ../ directory name on VMS (core patch)

* important changes in version 1.39_04 08/09/2008:
- Address: #38932: pax_global_header extracted as file
  Don't extract these special files, which are added by, among
  others, git-generated tarballs. It holds a comment and is not