@@ -1,3 +1,9 @@
+* important changes in version 1.52 13/06/2009:
+- Apply documentation patch to describe IBM APAR issue IZ50240; AIX tar
+  does not always end a Tar archive with a 0x00 null block, which can 
+  cause warnings from Archive::Tar.
+  This is a documentation patch only, and users of 1.50 need not upgrade.
+
 * important changes in version 1.50 12/06/2009:
 - Apply patch in #46450: Support for --no-same-permissions style behavior
   This facilitates leaving the +x bit, while still applying your umask on
